add a few notes on available API

--- a/html/index.html
+++ b/html/index.html
@@ -166,7 +166,7 @@
 
     <script>
       async function run() {
-        let response = await fetch("https://s3.amazonaws.com/followpearl.mit.edu/out.json");
+        let response = await fetch("https://s3.amazonaws.com/followpearl.mit.edu/out2.json");
         if (response.ok) {
           const pearlData = await response.json();
 
